fdo#77735: Don't proceed when all cells in the range are empty.

That means there is nothing to delete, and proceeding would cause Calc
to freeze.

Change-Id: I2a8fb5736870ba459082873c8f864283d8b9c664